Fixed z-index

--- a/sass/core/_main.scss
+++ b/sass/core/_main.scss
@@ -61,7 +61,7 @@ Patterns
   padding: 10px 0 10px 0;
   position: fixed;
   left: 0; top: 0;
-  z-index: 999;
+  z-index: 1200;
   float: left;
 
   .logo {
